<resources>
    <string name="app_name">Cash Pilot</string>
    <string name="log_in">Sign In</string>
    <string name="email_hint">Your Email Address</string>
    <string name="your_password">Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_now">Have an Account? Sign In</string>
    <string name="signUp_now">Do not have an Account? Create Now</string>
    <string name="log_out">Log Out</string>
    <string name="client_id">393454328873-4o2qr6c2f88ulgrp5jm8cb0acit0qpaj.apps.googleusercontent.com</string>
    <string name="log_in_google">Google</string>
    <string name="cash_pilot">CASH PILOT</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>